// Since: cosmos-sdk 0.52
syntax = "proto3";
package cosmos.consensus.v1;

import "cometbft/abci/v1/types.proto";

option go_package = "cosmossdk.io/x/comet/types";

// CometInfo defines the structure of the x/comet module's comet info.
message CometInfo {
  repeated cometbft.abci.v1.Misbehavior evidence         = 1;
  bytes                                 validators_hash  = 2;
  bytes                                 proposer_address = 3;
  cometbft.abci.v1.CommitInfo           last_commit      = 4;
}
